# CADC-simulated-search-and-rescue

./: CMakeLists.txt  README.md  boll.cpp  cube.cpp  fly.h  main.cpp  readme.txt
include/: fly.h
src/: ball.cpp  boll.cpp  cube.cpp  main.cpp
